# Face-authentication-dl-model

./: .gitignore  Data_to_dataset.py  Face_recognition.py  README.md  app.py  pyproject.toml
nootebooks/: eda.ipynb
src/: app_functions.py  data_load.py  make_data.py  make_model.py  model_load.py  trained_model_load_for_update.py  training_trained_model.py  updated_model_load.py
templates/: index.html
